gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-explicit_tail_calls.rs
pub fn you<T>() -> T {
    become bottom(); // { dg-error ".E0658." "" { target *-*-* } }
}

pub fn bottom<T>() -> T {
    become you(); // { dg-error ".E0658." "" { target *-*-* } }
}

fn main() {}

